...
                else
                  const SizedBox(height: 48),
              ],
            ),
          ),
          TextField(
            key: const Key('messageInput'),
            controller: controller,
            enabled: enabled,
            onChanged: onChanged,
            minLines: 5,
            maxLines: 8,
            maxLength: RuleEngine.maxMessageLength,
...
